--- a/overlays/sandbox/kustomization.yaml
+++ b/overlays/sandbox/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../../base/bgd
+- ../../base
 patches:
   - path: deployment-patch.yaml
   - target:
