--- a/overlays/dev/argocd/argocd.yaml
+++ b/overlays/dev/argocd/argocd.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: bgd-dev
+    namespace: dev
     server: https://kubernetes.default.svc 
   project: default 
   source: 
