--- a/overlays/sandbox/argocd/argocd.yaml
+++ b/overlays/sandbox/argocd/argocd.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: bgd-sandbox
+    namespace: sandbox
     server: https://kubernetes.default.svc 
   project: default 
   source: 
